# gstreamer_mxnet_plugins

./: README.md
gst_cpp_mxnet_recognize/: Dockerfile  README  README.md  TODO  pack.sh
gst_cpp_mxnet_recognize/gst_mxnet_cpp/: AUTHORS  COPYING  ChangeLog  README  configure.ac
gst_cpp_mxnet_recognize/gst_mxnet_cpp/src/: Makefile.am  gstmxnet.c  gstmxnet.h  gstmxnet_cpp.cc  gstmxnet_cpp_interop.h
gst_python_mxnet_face/: Dockerfile  README  mxnet3.tar  simple_numpy.py
gst_python_mxnet_face/detection3/: demo.sh  mxnet_face_wrapper.py
gst_python_mxnet_face/detection3/python/: gst_mxnet_face.py
gst_python_mxnet_face/detection3/symbol/: proposal.py  resnet.py
gst_python_mxnet_face/pictures_crowds/: ppl.mjpg
gst_python_numpy/: Dockerfile  README
